// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Footer component > renders with className prop set to a custom class name 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1fxo35-MuiGrid-root"
  >
    <div
      class="custom-class-name MuiBox-root css-4phtj7"
    >
      <div
        class="MuiContainer-root MuiContainer-disableGutters css-s46n0f-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-hw9v8i-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-5mjoem-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-v2woy3-MuiStack-root"
            >
              <h4>
                OM NETTSTEDET
              </h4>
              <a
                href="https://www.skde.no/om-skde/personvern/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Personvern
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
              <a
                href="https://www.skde.no/om-skde/informasjonskapsler/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Informasjonskapsler
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
              <a
                href="https://uustatus.no/nb/erklaringer/publisert/589a8d23-4993-446e-b7eb-ef310bfe1dd7"
                target="_blank"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Tilgjengelighetserklæring
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowOutwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 6v2h8.59L5 17.59 6.41 19 16 9.41V18h2V6z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-190ln95-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-v2woy3-MuiStack-root"
            >
              <h4>
                KONTAKT
              </h4>
              <a
                href="https://www.skde.no/om-skde/kontaktinformasjon/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Kontakt SKDE
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="custom-class-name MuiBox-root css-syol2p"
    >
      <div
        class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1wdbggu-MuiGrid-root"
          style="background: rgb(26, 26, 26);"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1fstb-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <a
                href="https://www.skde.no/"
              >
                <img
                  alt="SKDE-logo"
                  class="footer-logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  id="skde-footer-logo"
                  loading="lazy"
                  src="/img/logos/logo-skde-neg.svg?w=384&q=75"
                  srcset="/img/logos/logo-skde-neg.svg?w=256&q=75 1x, /img/logos/logo-skde-neg.svg?w=384&q=75 2x"
                  style="color: transparent;"
                  width="129"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <a
                href="https://www.kvalitetsregistre.no/"
              >
                <div
                  class="MuiBox-root css-1ih0f61"
                >
                  <img
                    alt="NSM-logo"
                    class="footer-logo"
                    data-nimg="fill"
                    decoding="async"
                    id="nsm-footer-logo"
                    loading="lazy"
                    sizes="100vw"
                    src="/img/logos/nsm-hvit.svg?w=3840&q=75"
                    srcset="/img/logos/nsm-hvit.svg?w=640&q=75 640w, /img/logos/nsm-hvit.svg?w=750&q=75 750w, /img/logos/nsm-hvit.svg?w=828&q=75 828w, /img/logos/nsm-hvit.svg?w=1080&q=75 1080w, /img/logos/nsm-hvit.svg?w=1200&q=75 1200w, /img/logos/nsm-hvit.svg?w=1920&q=75 1920w, /img/logos/nsm-hvit.svg?w=2048&q=75 2048w, /img/logos/nsm-hvit.svg?w=3840&q=75 3840w"
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            Senter for klinisk dokumentasjon og evaluering (SKDE) er en enhet i Helse Nord.
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h3cks1-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-nen11g-MuiStack-root"
            >
              <b>
                TELEFON
              </b>
              <a
                class="css-abunt4"
                href="tel:77755800"
              >
                77 75 58 00
              </a>
              <br />
              <b>
                EPOST
              </b>
              <a
                class="css-abunt4"
                href="mailto:postmottak@helse-nord.no"
              >
                postmottak@helse-nord.no
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h3cks1-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-nen11g-MuiStack-root"
            >
              <b>
                BESØKSADRESSE
              </b>
              Sykehusvegen 23 
              <br />
              9019 TROMSØ
              <a
                class="css-abunt4"
                href="https://maps.app.goo.gl/ohLzsYb8v6YvEDfL9"
              >
                Vis kart
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-4 css-xur2zb-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  ORGANISASJONSNUMMER
                </b>
                883658752
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-1umzert-MuiGrid-root"
            >
              <a
                href="https://www.helse-nord.no/"
              >
                <img
                  alt="Helse Nord logo"
                  class="footer-logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  id="helse-nord-logo"
                  loading="lazy"
                  src="/img/logos/logo-helse-nord-neg.svg?w=640&q=75"
                  srcset="/img/logos/logo-helse-nord-neg.svg?w=256&q=75 1x, /img/logos/logo-helse-nord-neg.svg?w=640&q=75 2x"
                  style="color: transparent;"
                  width="220"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Footer component > renders with default props 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1fxo35-MuiGrid-root"
  >
    <div
      class="footer MuiBox-root css-4phtj7"
    >
      <div
        class="MuiContainer-root MuiContainer-disableGutters css-s46n0f-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-hw9v8i-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-5mjoem-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-v2woy3-MuiStack-root"
            >
              <h4>
                OM NETTSTEDET
              </h4>
              <a
                href="https://www.skde.no/om-skde/personvern/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Personvern
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
              <a
                href="https://www.skde.no/om-skde/informasjonskapsler/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Informasjonskapsler
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
              <a
                href="https://uustatus.no/nb/erklaringer/publisert/589a8d23-4993-446e-b7eb-ef310bfe1dd7"
                target="_blank"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Tilgjengelighetserklæring
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowOutwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 6v2h8.59L5 17.59 6.41 19 16 9.41V18h2V6z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-190ln95-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-v2woy3-MuiStack-root"
            >
              <h4>
                KONTAKT
              </h4>
              <a
                href="https://www.skde.no/om-skde/kontaktinformasjon/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Kontakt SKDE
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer MuiBox-root css-syol2p"
    >
      <div
        class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1wdbggu-MuiGrid-root"
          style="background: rgb(26, 26, 26);"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1fstb-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <a
                href="https://www.skde.no/"
              >
                <img
                  alt="SKDE-logo"
                  class="footer-logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  id="skde-footer-logo"
                  loading="lazy"
                  src="/img/logos/logo-skde-neg.svg?w=384&q=75"
                  srcset="/img/logos/logo-skde-neg.svg?w=256&q=75 1x, /img/logos/logo-skde-neg.svg?w=384&q=75 2x"
                  style="color: transparent;"
                  width="129"
                />
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            Senter for klinisk dokumentasjon og evaluering (SKDE) er en enhet i Helse Nord.
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h3cks1-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-nen11g-MuiStack-root"
            >
              <b>
                TELEFON
              </b>
              <a
                class="css-abunt4"
                href="tel:77755800"
              >
                77 75 58 00
              </a>
              <br />
              <b>
                EPOST
              </b>
              <a
                class="css-abunt4"
                href="mailto:postmottak@helse-nord.no"
              >
                postmottak@helse-nord.no
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h3cks1-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-nen11g-MuiStack-root"
            >
              <b>
                BESØKSADRESSE
              </b>
              Sykehusvegen 23 
              <br />
              9019 TROMSØ
              <a
                class="css-abunt4"
                href="https://maps.app.goo.gl/ohLzsYb8v6YvEDfL9"
              >
                Vis kart
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-4 css-xur2zb-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  ORGANISASJONSNUMMER
                </b>
                883658752
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-1umzert-MuiGrid-root"
            >
              <a
                href="https://www.helse-nord.no/"
              >
                <img
                  alt="Helse Nord logo"
                  class="footer-logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  id="helse-nord-logo"
                  loading="lazy"
                  src="/img/logos/logo-helse-nord-neg.svg?w=640&q=75"
                  srcset="/img/logos/logo-helse-nord-neg.svg?w=256&q=75 1x, /img/logos/logo-helse-nord-neg.svg?w=640&q=75 2x"
                  style="color: transparent;"
                  width="220"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Footer component > renders with maxWidth prop set to false 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1fxo35-MuiGrid-root"
  >
    <div
      class="footer MuiBox-root css-4phtj7"
    >
      <div
        class="MuiContainer-root MuiContainer-disableGutters css-s46n0f-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-hw9v8i-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-5mjoem-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-v2woy3-MuiStack-root"
            >
              <h4>
                OM NETTSTEDET
              </h4>
              <a
                href="https://www.skde.no/om-skde/personvern/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Personvern
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
              <a
                href="https://www.skde.no/om-skde/informasjonskapsler/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Informasjonskapsler
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
              <a
                href="https://uustatus.no/nb/erklaringer/publisert/589a8d23-4993-446e-b7eb-ef310bfe1dd7"
                target="_blank"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Tilgjengelighetserklæring
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowOutwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 6v2h8.59L5 17.59 6.41 19 16 9.41V18h2V6z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-190ln95-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-v2woy3-MuiStack-root"
            >
              <h4>
                KONTAKT
              </h4>
              <a
                href="https://www.skde.no/om-skde/kontaktinformasjon/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Kontakt SKDE
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer MuiBox-root css-syol2p"
    >
      <div
        class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1wdbggu-MuiGrid-root"
          style="background: rgb(26, 26, 26);"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1fstb-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <a
                href="https://www.skde.no/"
              >
                <img
                  alt="SKDE-logo"
                  class="footer-logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  id="skde-footer-logo"
                  loading="lazy"
                  src="/img/logos/logo-skde-neg.svg?w=384&q=75"
                  srcset="/img/logos/logo-skde-neg.svg?w=256&q=75 1x, /img/logos/logo-skde-neg.svg?w=384&q=75 2x"
                  style="color: transparent;"
                  width="129"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <a
                href="https://www.kvalitetsregistre.no/"
              >
                <div
                  class="MuiBox-root css-1ih0f61"
                >
                  <img
                    alt="NSM-logo"
                    class="footer-logo"
                    data-nimg="fill"
                    decoding="async"
                    id="nsm-footer-logo"
                    loading="lazy"
                    sizes="100vw"
                    src="/img/logos/nsm-hvit.svg?w=3840&q=75"
                    srcset="/img/logos/nsm-hvit.svg?w=640&q=75 640w, /img/logos/nsm-hvit.svg?w=750&q=75 750w, /img/logos/nsm-hvit.svg?w=828&q=75 828w, /img/logos/nsm-hvit.svg?w=1080&q=75 1080w, /img/logos/nsm-hvit.svg?w=1200&q=75 1200w, /img/logos/nsm-hvit.svg?w=1920&q=75 1920w, /img/logos/nsm-hvit.svg?w=2048&q=75 2048w, /img/logos/nsm-hvit.svg?w=3840&q=75 3840w"
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            Senter for klinisk dokumentasjon og evaluering (SKDE) er en enhet i Helse Nord.
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h3cks1-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-nen11g-MuiStack-root"
            >
              <b>
                TELEFON
              </b>
              <a
                class="css-abunt4"
                href="tel:77755800"
              >
                77 75 58 00
              </a>
              <br />
              <b>
                EPOST
              </b>
              <a
                class="css-abunt4"
                href="mailto:postmottak@helse-nord.no"
              >
                postmottak@helse-nord.no
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h3cks1-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-nen11g-MuiStack-root"
            >
              <b>
                BESØKSADRESSE
              </b>
              Sykehusvegen 23 
              <br />
              9019 TROMSØ
              <a
                class="css-abunt4"
                href="https://maps.app.goo.gl/ohLzsYb8v6YvEDfL9"
              >
                Vis kart
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-4 css-xur2zb-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  ORGANISASJONSNUMMER
                </b>
                883658752
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-1umzert-MuiGrid-root"
            >
              <a
                href="https://www.helse-nord.no/"
              >
                <img
                  alt="Helse Nord logo"
                  class="footer-logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  id="helse-nord-logo"
                  loading="lazy"
                  src="/img/logos/logo-helse-nord-neg.svg?w=640&q=75"
                  srcset="/img/logos/logo-helse-nord-neg.svg?w=256&q=75 1x, /img/logos/logo-helse-nord-neg.svg?w=640&q=75 2x"
                  style="color: transparent;"
                  width="220"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Footer component > renders with page prop set to "behandlingskvalitet" 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1fxo35-MuiGrid-root"
  >
    <div
      class="footer MuiBox-root css-4phtj7"
    >
      <div
        class="MuiContainer-root MuiContainer-disableGutters css-s46n0f-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-hw9v8i-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-5mjoem-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-v2woy3-MuiStack-root"
            >
              <h4>
                OM NETTSTEDET
              </h4>
              <a
                href="https://www.skde.no/om-skde/personvern/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Personvern
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
              <a
                href="https://www.skde.no/om-skde/informasjonskapsler/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Informasjonskapsler
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
              <a
                href="https://uustatus.no/nb/erklaringer/publisert/589a8d23-4993-446e-b7eb-ef310bfe1dd7"
                target="_blank"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Tilgjengelighetserklæring
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowOutwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 6v2h8.59L5 17.59 6.41 19 16 9.41V18h2V6z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-190ln95-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-v2woy3-MuiStack-root"
            >
              <h4>
                KONTAKT
              </h4>
              <a
                href="https://www.skde.no/om-skde/kontaktinformasjon/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Kontakt SKDE
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer MuiBox-root css-syol2p"
    >
      <div
        class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1wdbggu-MuiGrid-root"
          style="background: rgb(26, 26, 26);"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1fstb-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <a
                href="https://www.skde.no/"
              >
                <img
                  alt="SKDE-logo"
                  class="footer-logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  id="skde-footer-logo"
                  loading="lazy"
                  src="/img/logos/logo-skde-neg.svg?w=384&q=75"
                  srcset="/img/logos/logo-skde-neg.svg?w=256&q=75 1x, /img/logos/logo-skde-neg.svg?w=384&q=75 2x"
                  style="color: transparent;"
                  width="129"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <a
                href="https://www.kvalitetsregistre.no/"
              >
                <div
                  class="MuiBox-root css-1ih0f61"
                >
                  <img
                    alt="NSM-logo"
                    class="footer-logo"
                    data-nimg="fill"
                    decoding="async"
                    id="nsm-footer-logo"
                    loading="lazy"
                    sizes="100vw"
                    src="/img/logos/nsm-hvit.svg?w=3840&q=75"
                    srcset="/img/logos/nsm-hvit.svg?w=640&q=75 640w, /img/logos/nsm-hvit.svg?w=750&q=75 750w, /img/logos/nsm-hvit.svg?w=828&q=75 828w, /img/logos/nsm-hvit.svg?w=1080&q=75 1080w, /img/logos/nsm-hvit.svg?w=1200&q=75 1200w, /img/logos/nsm-hvit.svg?w=1920&q=75 1920w, /img/logos/nsm-hvit.svg?w=2048&q=75 2048w, /img/logos/nsm-hvit.svg?w=3840&q=75 3840w"
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            Senter for klinisk dokumentasjon og evaluering (SKDE) er en enhet i Helse Nord.
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h3cks1-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-nen11g-MuiStack-root"
            >
              <b>
                TELEFON
              </b>
              <a
                class="css-abunt4"
                href="tel:77755800"
              >
                77 75 58 00
              </a>
              <br />
              <b>
                EPOST
              </b>
              <a
                class="css-abunt4"
                href="mailto:postmottak@helse-nord.no"
              >
                postmottak@helse-nord.no
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h3cks1-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-nen11g-MuiStack-root"
            >
              <b>
                BESØKSADRESSE
              </b>
              Sykehusvegen 23 
              <br />
              9019 TROMSØ
              <a
                class="css-abunt4"
                href="https://maps.app.goo.gl/ohLzsYb8v6YvEDfL9"
              >
                Vis kart
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-4 css-xur2zb-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  ORGANISASJONSNUMMER
                </b>
                883658752
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-1umzert-MuiGrid-root"
            >
              <a
                href="https://www.helse-nord.no/"
              >
                <img
                  alt="Helse Nord logo"
                  class="footer-logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  id="helse-nord-logo"
                  loading="lazy"
                  src="/img/logos/logo-helse-nord-neg.svg?w=640&q=75"
                  srcset="/img/logos/logo-helse-nord-neg.svg?w=256&q=75 1x, /img/logos/logo-helse-nord-neg.svg?w=640&q=75 2x"
                  style="color: transparent;"
                  width="220"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Footer component > renders with page prop set to "helseatlas" 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1fxo35-MuiGrid-root"
  >
    <div
      class="footer MuiBox-root css-4phtj7"
    >
      <div
        class="MuiContainer-root MuiContainer-disableGutters css-s46n0f-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-hw9v8i-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-5mjoem-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-v2woy3-MuiStack-root"
            >
              <h4>
                OM NETTSTEDET
              </h4>
              <a
                href="https://www.skde.no/om-skde/personvern/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Personvern
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
              <a
                href="https://www.skde.no/om-skde/informasjonskapsler/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Informasjonskapsler
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
              <a
                href="https://uustatus.no/nb/erklaringer/publisert/589a8d23-4993-446e-b7eb-ef310bfe1dd7"
                target="_blank"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Tilgjengelighetserklæring
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowOutwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 6v2h8.59L5 17.59 6.41 19 16 9.41V18h2V6z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-190ln95-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-v2woy3-MuiStack-root"
            >
              <h4>
                KONTAKT
              </h4>
              <a
                href="https://www.skde.no/om-skde/kontaktinformasjon/"
                target="_self"
              >
                <div
                  class="MuiStack-root css-1rlitzi-MuiStack-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
                  >
                    Kontakt SKDE
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer MuiBox-root css-syol2p"
    >
      <div
        class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1wdbggu-MuiGrid-root"
          style="background: rgb(26, 26, 26);"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1fstb-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <a
                href="https://www.skde.no/"
              >
                <img
                  alt="SKDE-logo"
                  class="footer-logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  id="skde-footer-logo"
                  loading="lazy"
                  src="/img/logos/logo-skde-neg.svg?w=384&q=75"
                  srcset="/img/logos/logo-skde-neg.svg?w=256&q=75 1x, /img/logos/logo-skde-neg.svg?w=384&q=75 2x"
                  style="color: transparent;"
                  width="129"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <a
                href="https://helse-forde.no/"
                title="Link til Helse Førde"
              >
                <img
                  alt="Helse Førde logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  loading="lazy"
                  src="/helseatlas/img/logos/helse-forde-hvit.svg?w=640&q=75"
                  srcset="/helseatlas/img/logos/helse-forde-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-forde-hvit.svg?w=640&q=75 2x"
                  style="color: transparent;"
                  width="234"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <a
                href="https://helse-vest.no/"
                title="Link til Helse Vest"
              >
                <img
                  alt="Helse Vest logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  loading="lazy"
                  src="/helseatlas/img/logos/helse-vest-hvit.svg?w=640&q=75"
                  srcset="/helseatlas/img/logos/helse-vest-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-vest-hvit.svg?w=640&q=75 2x"
                  style="color: transparent;"
                  width="234"
                />
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            Senter for klinisk dokumentasjon og evaluering (SKDE) er en enhet i Helse Nord.
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h3cks1-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-nen11g-MuiStack-root"
            >
              <b>
                TELEFON
              </b>
              <a
                class="css-abunt4"
                href="tel:77755800"
              >
                77 75 58 00
              </a>
              <br />
              <b>
                EPOST
              </b>
              <a
                class="css-abunt4"
                href="mailto:postmottak@helse-nord.no"
              >
                postmottak@helse-nord.no
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h3cks1-MuiGrid-root"
          >
            <div
              class="MuiStack-root css-nen11g-MuiStack-root"
            >
              <b>
                BESØKSADRESSE
              </b>
              Sykehusvegen 23 
              <br />
              9019 TROMSØ
              <a
                class="css-abunt4"
                href="https://maps.app.goo.gl/ohLzsYb8v6YvEDfL9"
              >
                Vis kart
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-4 css-xur2zb-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  ORGANISASJONSNUMMER
                </b>
                883658752
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row css-1umzert-MuiGrid-root"
            >
              <a
                href="https://www.helse-nord.no/"
              >
                <img
                  alt="Helse Nord logo"
                  class="footer-logo"
                  data-nimg="1"
                  decoding="async"
                  height="52"
                  id="helse-nord-logo"
                  loading="lazy"
                  src="/img/logos/logo-helse-nord-neg.svg?w=640&q=75"
                  srcset="/img/logos/logo-helse-nord-neg.svg?w=256&q=75 1x, /img/logos/logo-helse-nord-neg.svg?w=640&q=75 2x"
                  style="color: transparent;"
                  width="220"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
